tests/kulezi_tests/good/stupid_bool.lat
int main() {
    boolean x = f();
    return 0;
}

boolean f() { return true; }