tests/kulezi_tests/bad/big_variable.lat
int main() {
    int x_63=9223372036854775808;
    return 0;
}